# Dylanmcd16.github.io

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
weather-geospatial/: .gitignore  README.md  environment.yml  pyproject.toml
weather-geospatial/docs/: architecture.md  data-sources.md
weather-geospatial/examples/01-surface-observations/: README.md  run_pipeline.py
weather-geospatial/examples/02-severe-weather-reports/: README.md  run_pipeline.py
weather-geospatial/examples/03-mrms-radar-analysis/: README.md  run_pipeline.py
weather-geospatial/examples/04-report-station-matching/: README.md  run_pipeline.py
weather-geospatial/examples/05-gps-field-sensor/: README.md  run_pipeline.py
weather-geospatial/examples/06-multi-source-event/: README.md  run_pipeline.py
weather-geospatial/examples/07-hrrr-model-processing/: README.md  run_pipeline.py
weather-geospatial/examples/08-goes-glm-aggregation/: README.md  run_pipeline.py
weather-geospatial/examples/09-climate-anomaly/: README.md  run_pipeline.py
weather-geospatial/examples/iowa-severe-weather-explorer/: README.md  requirements.txt  run_pipeline.py
weather-geospatial/sample-data/boundaries/: field_plots_sample.geojson  iowa_counties_sample.geojson
weather-geospatial/sample-data/observations/: ghcn_monthly_sample.csv  mesonet_obs_sample.csv  storm_reports_sample.csv  surface_obs_sample.csv
weather-geospatial/src/weather_geo/: __init__.py  aggregation.py  climate.py  matching.py  model.py  pipeline.py  plotting.py  units.py  (+5 more)
(+91 files in other folders)
