[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-geo"
version = "0.1.0"
description = "Meteorological and geospatial data-engineering examples: acquire, validate, normalize, analyze, publish."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dylan McDermott" }]
keywords = ["meteorology", "geospatial", "gis", "weather", "raster", "etl"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
# Vector/raster stacks are optional so the pure-Python validation and
# normalization logic (and its tests) run without a heavy geospatial install.
geo = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
]
raster = [
    "rioxarray>=0.15",
    "rasterio>=1.3",
    "xarray>=2024.1",
]
viz = ["matplotlib>=3.7"]
# Live acquisition: HTTP CSV needs only requests (already required); GRIB2/NetCDF
# and S3 access need these.
live = [
    "s3fs>=2024.2",
    "cfgrib>=0.9.10",
    "netCDF4>=1.6",
    "scipy>=1.11",
]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
